--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.ChatAppSocket" parent="Theme.Material3.DynamicColors.DayNight"/>
+
+    <style name="Theme.Chatappsocket" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
