--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,35 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+xmlns:aapt="http://schemas.android.com/aapt"
+android:width="108dp"
+android:height="108dp"
+android:viewportWidth="800"
+android:viewportHeight="800">
+    <aapt:attr name="android:fillColor">
+        <gradient
+            android:endX="85.84757"
+            android:endY="92.4963"
+            android:startX="42.9492"
+            android:startY="49.59793"
+            android:type="linear">
+            <item
+                android:color="#44000000"
+                android:offset="0.0" />
+            <item
+                android:color="#00000000"
+                android:offset="1.0" />
+        </gradient>
+    </aapt:attr>
+    <group
+        android:translateX="250"
+        android:translateY="290">
+        <path android:fillColor="#fff" android:pathData="m275.18,107.65c-3.95,-0.36 -7.68,-0.87 -11.42,-1.01 -5.72,-0.22 -11.45,-0.36 -17.17,-0.22 -3.11,0.08 -6.24,0.66 -9.31,1.26 -3.27,0.64 -6.51,1.46 -9.72,2.39 -12.23,3.52 -23.21,9.49 -32.92,17.64 -4.9,4.12 -9.84,8.39 -13.86,13.32 -7.19,8.85 -13.03,18.63 -16.44,29.65 -0.5,1.61 -1.3,1.8 -2.69,1.8 -17.33,0 -34.66,0.08 -51.98,0 -2.87,-0.01 -4.95,0.81 -7,2.89 -15.88,16.04 -31.89,31.96 -47.85,47.93 -2.24,2.24 -4.63,4.06 -8.08,3.32 -3.8,-0.81 -6.04,-4.34 -6.06,-8.34 -0.07,-14 -0.05,-27.99 -0.07,-41.99 0,-3.16 -0.56,-3.76 -3.76,-3.81 -4.66,-0.07 -9.33,0.07 -13.99,-0.16 -9.01,-0.46 -18.04,-7.79 -20.73,-16.15 -1.26,-3.91 -1.99,-8.17 -2.01,-12.27C0,105.06 0.18,66.23 0,27.41 -0.06,13.95 8.65,4.83 16.86,1.88 20.21,0.67 23.96,0.05 27.52,0.05 101.09,-0.04 174.65,0.02 248.22,0c13.05,0 23.85,9.62 26.22,20.64 0.43,1.99 0.78,4.05 0.79,6.08 0.06,26.41 0.05,52.82 0.05,79.23 0,0.49 -0.05,0.99 -0.09,1.69ZM153.72,84.37c0.75,-8.74 -7.73,-16.95 -16.34,-16.8 -8.81,0.15 -16.48,7 -16.63,16.71 -0.14,8.47 7.82,16.38 16.32,16.36 9.99,-0.01 17.15,-8.41 16.66,-16.27ZM73.23,67.67c-9.05,-0.02 -16.46,7.2 -16.53,16.11 -0.08,8.92 7.57,16.88 16.22,16.89 9.18,0.01 16.7,-7.31 16.73,-16.27 0.03,-9.4 -7.15,-16.71 -16.42,-16.74ZM201.55,67.67c-9.14,0 -16.38,7 -16.4,15.88 -0.02,9.27 7.26,17.08 15.96,17.1 8.99,0.03 17.13,-7.79 16.98,-16.51 -0.16,-9.98 -8.76,-16.9 -16.55,-16.48Z"/>
+
+        <path android:fillColor="#fff" android:pathData="m170.74,196.65c1.39,-6.24 2.84,-11.92 3.91,-17.67 2.06,-11.05 7.34,-20.56 14.16,-29.2 7.32,-9.27 16.21,-16.86 26.71,-22.43 9.29,-4.93 19.11,-8.35 29.63,-9.19 6.27,-0.5 12.63,-0.93 18.87,-0.41 16.87,1.41 32.38,6.86 45.48,17.86 9.39,7.88 17.64,16.85 22.96,28.12 4.18,8.85 7.55,17.96 7.74,27.9 0.13,6.41 0.65,12.88 0,19.23 -1.94,18.89 -9.89,35.13 -23.07,48.76 -13.2,13.65 -29.24,22.24 -47.91,25.39 -7.21,1.21 -14.75,1.68 -22.03,1.08 -15.54,-1.3 -29.55,-7.22 -41.94,-16.71 -3.12,-2.39 -5.98,-5.18 -8.66,-8.07 -3.77,-4.06 -7.26,-8.36 -10.86,-12.58 -1.61,-1.89 -1.4,-3.55 0.67,-5 2.3,-1.62 4.52,-3.36 6.84,-4.97 1.48,-1.03 2.81,-0.87 4.09,0.6 2.48,2.87 4.72,6.16 7.74,8.32 5.63,4.02 11.49,7.89 17.74,10.8 5.34,2.49 11.25,4.09 17.08,5.08 6.3,1.07 12.74,0.63 19.17,-0.28 7.02,-1 13.77,-2.66 20.22,-5.51 9.08,-4.02 16.84,-9.82 23.59,-17.13 5.69,-6.16 8.87,-13.56 11.73,-21.23 2.2,-5.89 2.39,-12 2.59,-18.17 0.28,-8.99 -1.27,-17.56 -5.02,-25.73 -0.48,-1.05 -0.98,-2.13 -1.64,-3.07 -2.21,-3.15 -3.38,-6.51 -2.95,-10.44 0.25,-2.31 0.14,-4.66 0.05,-6.99 -0.17,-4.43 -3.43,-7.74 -7.73,-7.8 -4.35,-0.06 -8.71,0.14 -13.06,0 -1.85,-0.06 -3.79,-0.39 -5.5,-1.08 -6.4,-2.59 -12.88,-4.39 -19.86,-4.96 -26.94,-2.2 -46.37,9.56 -60.31,31.79 -3.62,5.77 -5.84,12.16 -6.96,18.89 -0.16,0.97 -0.02,1.99 -0.02,3.36 2.77,-0.18 5.44,-0.39 8.12,-0.51 0.87,-0.04 2.48,0.07 2.5,0.25 0.14,1.22 0.36,2.75 -0.22,3.69 -2.15,3.46 -4.72,6.65 -6.92,10.07 -3.41,5.29 -6.64,10.71 -9.99,16.04 -1.28,2.04 -3.49,2.3 -5.18,0.53 -1.99,-2.1 -3.7,-4.45 -5.68,-6.56 -2.92,-3.11 -6.04,-6.04 -8.93,-9.18 -2.54,-2.75 -4.95,-5.62 -7.25,-8.57 -0.61,-0.79 -1.15,-2.42 -0.75,-3.02 0.61,-0.92 2.05,-1.75 3.15,-1.78 2.78,-0.07 5.56,0.32 7.71,0.48Z"/>
+
+        <path android:fillColor="#fff" android:pathData="m301.3,162.52c-0.09,21.31 -8.93,38.59 -24.24,52.91 -0.41,0.38 -0.98,0.57 -1.43,0.92 -2.06,1.59 -3.8,3.23 -3.46,6.29 0.3,2.63 0.21,5.34 -0.01,7.99 -0.07,0.9 -0.85,2.06 -1.65,2.55 -4.45,2.72 -8.93,5.42 -13.55,7.82 -3,1.56 -5.76,-0.12 -6.34,-3.48 -0.52,-3.05 -0.94,-6.11 -1.55,-9.14 -0.19,-0.97 -0.61,-2.06 -1.29,-2.74 -5.53,-5.63 -11.1,-11.23 -16.76,-16.71 -0.87,-0.85 -2.29,-1.41 -3.51,-1.56 -3.11,-0.37 -6.26,-0.44 -9.39,-0.61 -2.67,-0.15 -4.15,-2.33 -2.97,-4.69 2.03,-4.07 4.47,-7.95 6.31,-12.1 1.93,-4.38 5.26,-5.85 9.41,-4.61 4.29,1.28 6.12,-1.05 8.34,-3.87 3.14,-3.99 6.33,-8.08 10.14,-11.38 3.82,-3.29 8.47,-5.62 12.7,-8.44 5.92,-3.95 12.56,-6.09 19.46,-7.05 5.71,-0.79 11.56,-0.72 17.35,-0.88 1.68,-0.05 2.46,1.14 2.44,2.83 -0.03,2 0,3.99 0,5.99ZM282.11,181.64c-0.04,-4.42 -4.21,-8.4 -8.79,-8.38 -4.38,0.02 -8.82,4.15 -8.57,8.29 0.26,4.27 3.67,8.66 8.82,8.61 4.71,-0.05 8.58,-3.88 8.54,-8.52Z"/>
+
+        <path android:fillColor="#fff" android:pathData="m212.53,236.06c0.35,-7.34 3.81,-13.92 9.36,-19.53 1.74,-1.76 3.7,-1.91 6.52,0.59 4.4,3.91 8.43,8.26 12.47,12.56 1.35,1.43 1.11,3.22 -0.24,4.74 -4.87,5.48 -10.96,8.69 -18.17,9.82 -1.29,0.2 -2.58,0.46 -3.88,0.47 -4.35,0.05 -6.05,-1.67 -6.05,-5.96 0,-0.67 0,-1.33 0,-2.7Z"/>
+
+    </group>
+
 </vector>
